--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -9,7 +9,12 @@
     </style>
 
     <style name="NotificationAnim">
-        <item name="android:windowEnterAnimation">@anim/anim_in</item>
-        <item name="android:windowExitAnimation">@anim/anim_out</item>
+        <item name="android:windowEnterAnimation">@anim/whole_notification_anim_in</item>
+        <item name="android:windowExitAnimation">@anim/whole_notification_anim_out</item>
+    </style>
+
+    <style name="WholeNotificationAnim">
+        <item name="android:windowEnterAnimation">@anim/whole_notification_anim_in</item>
+        <item name="android:windowExitAnimation">@anim/whole_notification_anim_out</item>
     </style>
 </resources>
